--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.6.3",
     "mongoose-auto-increment": "^5.0.1",
+    "net": "^1.0.2",
+    "net-ping": "^1.2.3",
     "ngrok": "^3.2.5",
     "node-quickbooks": "^2.0.33",
     "nodemailer": "^6.2.1",
